--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
    var ol3d = new olcs.OLCesium({
       map: ol2d,
     });
-
+    datasour = ol3d.getDataSources()
+    
     var scene = ol3d.getCesiumScene();
     // add local terrain tiles, need to be on local web server
     var terrainProvider = new Cesium.CesiumTerrainProvider({
@@ -114,12 +115,36 @@
     appearance : new Cesium.PolylineMaterialAppearance()
     }));
   }
+
+  //move camera to position given
   function moveTo(x,y,z) 
   {
     scene.camera.flyTo({
       destination : Cesium.Cartesian3.fromDegrees(x, y, z)
     });
   }
-  </script>
+//gets cesium entities variable
+const viewer = ol3d.getDataSourceDisplay().defaultDataSource;
+const entities = viewer.entities;
+//function creates polygon using given positions array and height
+function addPolygon(degarr, height) {
+  //adds polygon
+  entities.add({
+    polygon: {
+      hierarchy: new Cesium.PolygonHierarchy(
+        Cesium.Cartesian3.fromDegreesArray(degarr)
+      ),
+      height: 3000.0,
+      extrudedHeight: height,
+      outline: true,
+      outlineColor: Cesium.Color.WHITE,
+      outlineWidth: 4,
+      material: Cesium.Color.fromRandom({ alpha: 1.0 }),
+    },
+  });
+}
+
+
+</script>
 </body>
 </html>
