--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
    var ol3d = new olcs.OLCesium({
       map: ol2d,
     });
-    datasour = ol3d.getDataSources()
-    
+
     var scene = ol3d.getCesiumScene();
     // add local terrain tiles, need to be on local web server
     var terrainProvider = new Cesium.CesiumTerrainProvider({
@@ -54,7 +53,7 @@
     ol3d.setEnabled(true);
     // change between 2d to 3d
     var setEnabled = function () {
-        ol3d.setEnabled(!ol3d.getEnabled())
+      modeSwitch()
         
     };
     document.getElementById('enable').addEventListener('click', setEnabled);
@@ -159,6 +158,35 @@ function addImage(x,y,z,url)
   });
 }
 
+//function switches between 2d and 3d
+function modeSwitch() {
+  //if its in 2d mode change to 3d
+  if(scene._mode == 1)
+  {
+    //fix camera location bug
+    scene.camera.flyTo({
+    destination : scene.camera.position,
+    orientation : {
+        heading : Cesium.Math.toRadians(0),
+        pitch : Cesium.Math.toRadians(-90),
+        roll : 0.0
+    }
+    });
+    scene._mode = 3;
+  } 
+  else //if its in 3d changes to 2d
+  {
+    //fix camera location bug
+      scene.camera.flyTo({
+      destination : scene.camera.position,
+      orientation : {
+          heading : Cesium.Math.toRadians(0),
+          pitch : Cesium.Math.toRadians(-90),
+          roll : 0.0
+      }});
+    scene._mode = 1;
+  }
+}
 </script>
 </body>
 </html>
