--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
   <div id="map" class="map"></div>
   <input id="enable" type="button" value="Enable/disable" />
-  <input id="a" type="number" value="35.04592791446208"/>
-  <input id="b" type="number" value="31.48658108795938"/>
-  <input id="c" type="number" value="5000"/>
+  <input id="a" type="number" value="35.269343"/>
+  <input id="b" type="number" value="32.856909"/>
+  <input id="c" type="number" value="100"/>
   <input id="addpoints" type="button" value="ADD POINT" onclick="addPoint(document.getElementById('a').value,document.getElementById('b').value,document.getElementById('c').value)"/>
   <script>
 
@@ -225,6 +225,23 @@ function createModel(url, x, y, height) {
   viewer.trackedEntity = entity;
 }
 
+function loadStructureModel(url) {
+
+  const tileset = scene.primitives.add(new Cesium.Cesium3DTileset({
+    url : url
+  }));
+
+  tileset.allTilesLoaded.addEventListener(function() {
+    console.log('All tiles are loaded');
+  });
+
+  tileset.readyPromise.then(function(tileset) {
+      // Set the camera to view the newly added tileset
+      console.log('Moving camera');
+      scene.camera.viewBoundingSphere(tileset.boundingSphere, new Cesium.HeadingPitchRange(0, 100, 0));
+  });
+
+}
 
 </script>
 </body>
