--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ function printToExport()
   return saving_string;
 }
 
-function getAltitOfPoint(pointID) { // will only work with points in terrain data provided
+function getAltitOfPointById(pointID) { // will only work with points in terrain data provided
   if (!(pointID in pointDictionary))
   { return "this point id doesnt exist" } // Does point exist.
   var height_data;
@@ -465,6 +465,14 @@ function getAltitOfPoint(pointID) { // will only work with points in terrain dat
   return height_data; // returns promise of height data
 }
 
+function getAltitOfPointByLocation(x,y) { // will only work with points in terrain data provided
+  var height_data;
+  //gets altitute of the point (async)
+  height_data = Cesium.sampleTerrain(scene.terrainProvider, 11, [Cesium.Cartographic.fromDegrees(x,y)]).then(function(samples) {
+    return samples[0].height;
+  });
+  return height_data; // returns promise of height data
+}
 </script>
 </body>
 </html>
