added addCircle to the WPF

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       ellipse: {
         semiMinorAxis: semiMinorAxis,
         semiMajorAxis: semiMajorAxis,
-        height: 200000.0,
+        height: z,
         material: Cesium.Color.GREEN,
         outline: true, // height must be set for outline to display
       },
