fixed coloring issue of altitude

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="map" class="map"></div>
   <input id="enable" type="button" value="Enable/disable" />
 
-  <a>altitude: </a>    <a id="realTimeAltData"></a> 
+  <a style="color:white;">altitude: </a>    <a style="color:white;" id="realTimeAltData"></a> 
   <input id="altData" hidden >
 
   <script>
