cameras now expand when hovered

--- a/my-gst-webrtc/js/layout.html
+++ b/my-gst-webrtc/js/layout.html
@@ -1,15 +1,73 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            html body {
+                margin: 0;
+            }     
+            * {
+                box-sizing: border-box;
+            } 
+            td {
+                width : 50vw;   
+                height : 19.4vh;     
+            }
+
+            td:hover{
+                width : 80vw;   
+                height : 50vh;
+            }
+
+            iframe {
+                width : 100%;
+                height : 100%;
+            }
+        </style>
+    </head>
+
     <body>
-        <iframe src="index.html" name="iframe_1" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_2" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_3" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_4" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_5" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_6" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_7" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_8" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_9" title="Iframe Example"></iframe>
-        <iframe src="index.html" name="iframe_10" title="Iframe Example"></iframe>
+        <table>
+            <tr>
+                <td>
+                    <iframe src="index.html" name="iframe_1" title="Iframe Example"></iframe>
+                </td>
+                <td>
+                    <iframe src="index.html" name="iframe_2" title="Iframe Example"></iframe>
+                </td>
+            </tr>                
+            <tr>
+                <td>
+                    <iframe src="index.html" name="iframe_3" title="Iframe Example"></iframe>
+                </td>
+                <td>
+                    <iframe src="index.html" name="iframe_4" title="Iframe Example"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <iframe src="index.html" name="iframe_5" title="Iframe Example"></iframe>
+                </td>
+                <td>
+                    <iframe src="index.html" name="iframe_6" title="Iframe Example"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <iframe src="index.html" name="iframe_7" title="Iframe Example"></iframe>
+                </td>
+                <td>
+                    <iframe src="index.html" name="iframe_8" title="Iframe Example"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <iframe src="index.html" name="iframe_9" title="Iframe Example"></iframe>
+                </td>
+                <td>
+                    <iframe src="index.html" name="iframe_10" title="Iframe Example"></iframe>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
