added relevant values to App.config file

--- a/my-gst-webrtc/js/layout.html
+++ b/my-gst-webrtc/js/layout.html
@@ -14,9 +14,9 @@
                 height : 19.4vh;     
             }
 
-            td:hover{
-                width : 80vw;   
-                height : 50vh;
+            td:active {
+                width : 70vw;   
+                height : 40vh;
             }
 
             iframe {
